# koderz

./: .env.example  .gitignore  ARCHITECTURE.md  CHECKPOINT_GUIDANCE_QUICK_REF.md  CLAUDE.md  CONTEXT_ANALYSIS_REVISED.md  CONTEXT_WINDOW_UPDATE.md  IMPLEMENTATION_SUMMARY.md  KODERZ_PROJECT.md  MANIFEST.txt  QUICKSTART.md  README.md  RESEARCH.md  SMALL_FRONTIER_IMPLEMENTATION.md  TODO.md  benchmark_full.py  notify-on-complete.sh  ollama_ctx.py  pyproject.toml  setup_and_verify.sh  test_checkpoint_guidance.py
debug/: exp_0002c751_zeroshot_code.py  exp_0002c751_zeroshot_raw.txt  exp_00166607_zeroshot_code.py  exp_00166607_zeroshot_raw.txt  exp_00343dc0_zeroshot_code.py  exp_00343dc0_zeroshot_raw.txt  exp_00343dc0_zeroshot_result.txt  exp_0039659a_zeroshot_code.py  exp_0039659a_zeroshot_raw.txt  exp_00507901_zeroshot_code.py  exp_00507901_zeroshot_raw.txt  exp_005a5bf3_zeroshot_code.py  exp_005a5bf3_zeroshot_raw.txt  exp_00615aaf_zeroshot_code.py  exp_00615aaf_zeroshot_raw.txt  exp_0093c55d_zeroshot_code.py  exp_0093c55d_zeroshot_raw.txt  exp_0093c55d_zeroshot_result.txt  exp_00d7ebe0_zeroshot_code.py  exp_00d7ebe0_zeroshot_raw.txt  exp_00d7ebe0_zeroshot_result.txt  exp_00e56256_zeroshot_code.py  exp_00e56256_zeroshot_raw.txt  exp_01022979_zeroshot_code.py  exp_01022979_zeroshot_raw.txt  exp_010f8896_zeroshot_code.py  exp_010f8896_zeroshot_raw.txt  exp_012d04b8_zeroshot_code.py  exp_012d04b8_zeroshot_raw.txt  exp_0155d2c7_zeroshot_code.py  exp_0155d2c7_zeroshot_raw.txt  exp_01645bc0_zeroshot_code.py  exp_01645bc0_zeroshot_raw.txt  exp_01832200_zeroshot_raw.txt  (+5485 more)
(+58 files in other folders)
